--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="arbrook\rendering\data\buffercache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arbrook\rendering\data\definitions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arbrook\core\ecs\entity.hpp">
