--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -290,6 +290,9 @@
     <ClInclude Include="arbrook\rendering\data\bufferhandle.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\vertex.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="arbrook\core\engine\services\serviceregistry.inl">
