started on textures in dx11

--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -276,16 +276,18 @@
     <ClInclude Include="arbrook\rendering\data\DirectX\inputlayout.hpp" />
     <ClInclude Include="arbrook\rendering\data\DirectX\renderinterface.hpp" />
     <ClInclude Include="arbrook\rendering\data\DirectX\shader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\DirectX\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\DirectX\window.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\enumtypes.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\ibuffer.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\iinputlayout.hpp" />
     <ClInclude Include="arbrook\rendering\data\interface\ishader.hpp" />
+    <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\enumtypes.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\inputlayout.hpp" />
+    <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\window.hpp" />
     <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
-    <ClInclude Include="arbrook\rendering\data\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\shadersource.hpp" />
     <ClInclude Include="arbrook\rendering\data\texturehandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\buffer.hpp" />
