--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -215,9 +215,6 @@
     <ClInclude Include="arbrook\rendering\data\OpenGL\shader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="arbrook\rendering\data\texture.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="arbrook\rendering\data\shadercache.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -294,6 +291,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\rendering\data\DirectX\dx11includes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\interface\itexture.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\DirectX\texture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
