--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -302,6 +302,7 @@
     <ClInclude Include="arbrook\rendering\data\textureparameters.hpp" />
     <ClInclude Include="arbrook\rendering\data\vertex.hpp" />
     <ClInclude Include="arbrook\rendering\data\vertexattribute.hpp" />
+    <ClInclude Include="arbrook\core\events\defaults\windowevents.hpp" />
     <ClInclude Include="arbrook\rendering\pipeline\pipeline_base.hpp" />
     <ClInclude Include="arbrook\rendering\rendering.hpp" />
     <ClInclude Include="arbrook\sandbox\modules\testmodule.hpp" />
