Depth Testing and Stencil Testing implemented in OGL and DX11

--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -341,5 +341,6 @@
       <Filter>Header Files</Filter>
     </None>
     <None Include="resources\shaders\default.shader" />
+    <None Include="resources\shaders\color.shader" />
   </ItemGroup>
 </Project>
