--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -417,6 +417,7 @@
     <None Include="external_include\rsl\src\rythe\primitives" />
     <None Include="external_include\rsl\src\rythe\type_util" />
     <None Include="external_include\rsl\src\rythe\utilities" />
+    <None Include="resources\shaders\color.shader" />
     <None Include="resources\shaders\default.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
