--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -419,6 +419,8 @@
     <None Include="external_include\rsl\src\rythe\utilities" />
     <None Include="resources\shaders\color.shader" />
     <None Include="resources\shaders\default.shader" />
+    <None Include="resources\shaders\instance_test.shader" />
+    <None Include="resources\shaders\test.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
