re did the testing suite, have some weird behaviour between dx11 and opengl, but on the cPP side

--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="arbrook\rendering\data\buffercache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arbrook\rendering\data\renderingtest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arbrook\core\ecs\entity.hpp">
@@ -303,6 +306,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arbrook\input\modules\inputmodule.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arbrook\rendering\data\renderingtest.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
