--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -308,6 +308,7 @@
     <ClCompile Include="arbrook\core\logging\logging.cpp" />
     <ClCompile Include="arbrook\core\modules\module.cpp" />
     <ClCompile Include="arbrook\rendering\data\buffercache.cpp" />
+    <ClCompile Include="arbrook\rendering\data\renderingtest.cpp" />
     <ClCompile Include="arbrook\rendering\data\texturecache.cpp" />
     <ClCompile Include="arbrook\rendering\data\shadercache.cpp" />
     <ClCompile Include="arbrook\sandbox\modules\testmodule.cpp" />
@@ -366,6 +367,7 @@
     <ClInclude Include="arbrook\rendering\data\OpenGL\inputlayout.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\texture.hpp" />
     <ClInclude Include="arbrook\rendering\data\OpenGL\window.hpp" />
+    <ClInclude Include="arbrook\rendering\data\renderingtest.hpp" />
     <ClInclude Include="arbrook\rendering\data\shaderhandle.hpp" />
     <ClInclude Include="arbrook\rendering\data\shadersource.hpp" />
     <ClInclude Include="arbrook\rendering\data\texturehandle.hpp" />
