finished up testing framework, and added some frametime measurements

--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -422,6 +422,7 @@
     <None Include="resources\shaders\color.shader" />
     <None Include="resources\shaders\default.shader" />
     <None Include="resources\shaders\instance_test.shader" />
+    <None Include="resources\shaders\scaled_color.shader" />
     <None Include="resources\shaders\test.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
