--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -350,5 +350,6 @@
     <None Include="resources\shaders\color.shader" />
     <None Include="resources\shaders\test.shader" />
     <None Include="resources\shaders\instance_test.shader" />
+    <None Include="resources\shaders\scaled_color.shader" />
   </ItemGroup>
 </Project>
