Drawing Tests for my API, Native OpenGL, and Native DX11 are implemented

--- a/Arbrook.vcxproj.filters
+++ b/Arbrook.vcxproj.filters
@@ -351,5 +351,6 @@
     <None Include="resources\shaders\test.shader" />
     <None Include="resources\shaders\instance_test.shader" />
     <None Include="resources\shaders\scaled_color.shader" />
+    <None Include="resources\shaders\fluid.shader" />
   </ItemGroup>
 </Project>
