--- a/Arbrook.vcxproj
+++ b/Arbrook.vcxproj
@@ -421,6 +421,7 @@
     <None Include="external_include\rsl\src\rythe\utilities" />
     <None Include="resources\shaders\color.shader" />
     <None Include="resources\shaders\default.shader" />
+    <None Include="resources\shaders\fluid.shader" />
     <None Include="resources\shaders\instance_test.shader" />
     <None Include="resources\shaders\scaled_color.shader" />
     <None Include="resources\shaders\test.shader" />
